# sortable

./: CMakeLists.txt  README.md
include/son8/: sortable.hxx
include/son8/sortable/: impl.hxx  util.hxx
include/son8/sortable/impl/: bubble.hxx  insertion.hxx  merge.hxx  quick.hxx  selection.hxx  simple.hxx
include/son8/sortable/util/: assign.hxx  compare.hxx  permutate.hxx  print.hxx  range.hxx  stat.hxx  swap.hxx
source/: CMakeLists.txt
